; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nf_conntrack_proto_gre.c_gre_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nf_conntrack_proto_gre.c_gre_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nf_conn = type { %struct.nf_conn* }

@.str = private unnamed_addr constant [11 x i8] c" entering\0A\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"no master !?!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nf_conn*)* @gre_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gre_destroy(%struct.nf_conn* %0) #0 {
  %2 = alloca %struct.nf_conn*, align 8
  %3 = alloca %struct.nf_conn*, align 8
  store %struct.nf_conn* %0, %struct.nf_conn** %2, align 8
  %4 = load %struct.nf_conn*, %struct.nf_conn** %2, align 8
  %5 = getelementptr inbounds %struct.nf_conn, %struct.nf_conn* %4, i32 0, i32 0
  %6 = load %struct.nf_conn*, %struct.nf_conn** %5, align 8
  store %struct.nf_conn* %6, %struct.nf_conn** %3, align 8
  %7 = call i32 @pr_debug(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.nf_conn*, %struct.nf_conn** %3, align 8
  %9 = icmp ne %struct.nf_conn* %8, null
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = call i32 @pr_debug(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  br label %15

12:                                               ; preds = %1
  %13 = load %struct.nf_conn*, %struct.nf_conn** %3, align 8
  %14 = call i32 @nf_ct_gre_keymap_destroy(%struct.nf_conn* %13)
  br label %15

15:                                               ; preds = %12, %10
  ret void
}

declare dso_local i32 @pr_debug(i8*) #1

declare dso_local i32 @nf_ct_gre_keymap_destroy(%struct.nf_conn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
